[build-system]
requires = ["hatchling >= 1.26","hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[project]
name = "structures"
dynamic = ["version"]
dependencies = [

]
authors = [
  { name="Thomas Duffett", email="thomasduffett4@gmail.com" },
]
description = "A collection of scripts for structural engineering design"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
]
license = ""
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"